--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^0.13.4
   mongo_dart: ^0.7.4+1
   localstore: ^1.2.3
+  localstorage: ^4.0.0+1
+  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
