--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   image_picker: ^0.7.2+1
   path: ^1.8.0
   async: ^2.8.2
+  intl: ^0.17.0
+  cached_network_image: ^3.2.0
+  timezone: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +66,11 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo/
-    - assets/images/
     - assets/avatars/
+  fonts:
+    - family: WaterBrush
+      fonts:
+        - asset: fonts/WaterBrush-Regular.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
